# mini-fs

./: .gitignore  CMakeLists.txt  README.md  client.c  client.h  commands.h  handlers.c  handlers.h  log.txt  log2.txt  main.c  std.in  std.out  utils.h
client/: CMakeLists.txt  client.c  client.h  main.c
client/client/: client.c  client.h  connection.c  connection.h  net_handlers.c  net_handlers.h
fs/: CMakeLists.txt  descriptor_table.c  descriptor_table.h  dir_record.c  dir_record.h  inode.c  inode.h  main.c  superblock.c  superblock.h
fs/handlers/: close_file.c  create_dir.c  create_file.c  delete_object.c  destroy_fs.c  handlers.h  init_fs.c  list_dir.c  open_file.c  read_from_file.c  seek_pos.c  write_to_file.c
fs/module/: CMakeLists.txt  Kbuild.in  mini-fs-module.c  module.c
fs/module/constants/: commands.h  constants.h  fs_constants.h  struct_sizes.h
fs/module/handlers/: close_file.c  create_dir.c  create_file.c  decode_execute.c  decode_execute.h  delete_object.c  destroy_fs.c  handlers.h  init_fs.c  list_dir.c  open_file.c  read_from_file.c  seek_pos.c  write_to_file.c
fs/module/module/: mini-fs-module.c
fs/module/server_utils/: disk_utils.c  disk_utils.h  fs_io_utils.c  fs_io_utils.h  fs_types.h  helpers.c  helpers.h  module_defines.h  string_utils.c  string_utils.h
fs/module/structures/: descriptor_table.c  descriptor_table.h  dir_record.c  dir_record.h  fs_inode.c  fs_inode.h  inode.c  inode.h  superblock.c  superblock.h
fs/net/: log.h  loop.c  loop.h
fs/structures/: descriptor_table.c  descriptor_table.h  dir_record.h  inode.h  superblock.h
test/: check.py  check_write_read.py  run.sh  test.py  write_read_test.py  write_read_test_constants.py
utils/: CMakeLists.txt  defines.h  utils.c  utils.h
utils/constants/: commands.h  constants.h  fs_constants.h  struct_sizes.h
utils/headers/: CMakeLists.txt  commands.h  defines.h  disk_utils.h  helpers.h  io_utils.h  net_utils.h  string_utils.h  utils.h
utils/headers/constants/: commands.h  constants.h  fs_constants.h  opcodes.h  struct_sizes.h
utils/source/: CMakeLists.txt  disk_utils.c  helpers.c  io_utils.c  net_utils.c  string_utils.c  utils.c
